--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/module"]
 	path = lib/module
-	url = https://github.com/WotScript/module
+	url = https://github.com/Hazurl/logger
+[submodule "lib/logger"]
+	path = lib/logger
+	url = https://github.com/WattLang/logger
